# hc2_ph1_todo

./: .gitignore  README.md  pyproject.toml  setup.py  simple_import_test.py  simple_test.py  test_functionality.py  test_run.py  verify_functionality.py  verify_setup.py
.specify/memory/: constitution.md
history/prompts/001-cli-todo-app/: 002-interactive-menu.implement.prompt.md  1-create-todo-app-spec.spec.prompt.md  2-create-implementation-plan.plan.prompt.md  3-create-task-breakdown.tasks.prompt.md  4-implement-todo-app.tasks.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
history/prompts/general/: 001-fastapi-integration.general.prompt.md
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo-app/checklists/: requirements.md
specs/001-cli-todo-app/contracts/: cli-contract.md
src/: todo_app.py  todos.json
src/cli/: cli_interface.py
src/models/: todo_item.py
src/services/: todo_service.py
tests/integration/: test_add_todo.py  test_delete_todo.py  test_list_todos.py  test_mark_todo.py  test_update_todo.py
tests/unit/: test_delete_todo.py  test_mark_todo.py  test_todo_item.py  test_todo_service.py  test_update_todo.py
